# mlops_hse_course

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  app.py  db.py  docker-compose.yml  main.py  pyproject.toml
core/: db.py  models.py
tests/: test_app.py
