[tool.poetry]
name = "homework_1"
version = "0.1.0"
description = ""
authors = ["Ilya Indyk <47114236+IlyaInd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.1.3"
werkzeug = "2.1.2"
scikit-learn = "^1.0.1"
flask-restx = "0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
