[tool.poetry]
name = "homework_1"
version = "0.2.0"
description = ""
authors = ["Ilya Indyk <47114236+IlyaInd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.1.3"
werkzeug = "2.1.2"
scikit-learn = "^1.0.1"
flask-restx = "0.5.1"
sqlalchemy = "1.4.32"
psycopg2 = "2.8.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
